tests/compile_failure/src/Core/NotNullFlatPtr.construct_nullptr.fail.cpp
#include "Phi/Core/FlatPtr.hpp"
#include <Phi/Core/FlatPtr.hpp>

int main()
{
    phi::NotNullFlatPtr ptr(nullptr);
}
